--- a/modul4_web/css/style.css
+++ b/modul4_web/css/style.css
@@ -26,6 +26,8 @@ body {
     margin: 0;
 }
 
+
+
 /* Styling Umum untuk Link */
 a {
     text-decoration: none;
@@ -275,6 +277,7 @@ input[type="text"],select{width:100%;padding:8px;border-radius:6px;border:1px so
 .stat{flex:1;min-width:140px;padding:14px;border-radius:10px;color:#fff;display:flex;align-items:center;gap:10px}
 .stat .icon{font-size:28px}
 .stat.red{background:#f33}
+.stat.orange{background:rgb(255, 153, 0)}
 .stat.blue{background:#0bb}
 .stat.green{background:#2ecc71}
 .stat.yellow{background:#f1c40f;color:#000}
